<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip" >


    <Button
        android:id="@+id/create_account_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />
    <Button
        android:id="@+id/place_hold_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_hold" />
    <Button
        android:id="@+id/cancel_hold_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_hold" />
    <Button
        android:id="@+id/admin_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_system" />

</LinearLayout>
