<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip" >


    <EditText
        android:id="@+id/user_name_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name"
        />
    <EditText
        android:id="@+id/password_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/user_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>
